responsive styles were added to the header

--- a/app/pug/partials/header.pug
+++ b/app/pug/partials/header.pug
@@ -2,24 +2,28 @@ include /partials/navigation
 include /partials/notifications-dropdown
 include /partials/lang-select
 include /partials/user-dropdown
+include /partials/burger
 
 mixin header(props = {})
 
   header.header
-    .header__wrap
-      .header__left
-        .header__logo
-          .header__logo-icon
-            img(src="images/logo.svg", alt="logo")
-          span.header__logo-title Crm Name
+    .container
+      .header__wrap
+        .header__left
+          .header__logo
+            .header__logo-icon
+              img(src="images/logo.svg", alt="logo")
+            span.header__logo-title Crm Name
 
-      .header__right
-        .header__navigation
-          +navigation(props)
-        .header__dropdowns
-          .header__dropdown
-            +notifications-dropdown()
-          .header__dropdown
-            +lang-select()
-          .header__dropdown
-            +user-dropdown()
+        .header__right
+          .header__navigation.js-header-navigation
+            +navigation(props)
+          .header__dropdowns
+            .header__dropdown
+              +notifications-dropdown()
+            .header__dropdown
+              +lang-select()
+            .header__dropdown
+              +user-dropdown()
+          .header__burger
+            +burger({classes:'js-header-navigation-burger'})
