--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -40,6 +40,7 @@ $body-bg: $c-athens-gray
 $r-primary  : 3px
 $r-secondary: 10px
 // Shadows
-$s-primary: 0px 4px 5px rgba(0, 0, 0, 0.05)
+$s-primary  : 0px 4px 5px rgba(0, 0, 0, 0.05)
+$s-secondary: -5px 0 20px 0 rgba(0,0,0,.25)
 // Overlays
 $o-primary: rgba(0, 0, 0, 0.54)
