--- a/app/sass/components/navigation.sass
+++ b/app/sass/components/navigation.sass
@@ -4,9 +4,16 @@
     display: flex
     align-items: center
     justify-content: space-between
+    +media-max($bp-xl)
+      flex-direction: column
+      align-items: flex-start
+      text-align: left
   &__item
     &:not(:last-child)
       margin-right: 10px
+      +media-max($bp-xl)
+        margin-right: 0
+        margin-bottom: 10px
   &__link
     font-size: rem(14px)
     font-weight: 600
