--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -43,7 +43,11 @@ $select-height: 45px
       &:focus
         border-color: transparent
     .select__dropdown
-      margin-top: 6px
+      margin-top: 1px
+  &--h-100
+    height: 100%
+    display: flex
+    align-items: center
   // Elements
   &__label
     position: relative
