--- a/app/sass/components/user-dropdown.sass
+++ b/app/sass/components/user-dropdown.sass
@@ -1,7 +1,7 @@
 .user-dropdown
-  height: 100%
   // Elements
   &__toggle
+    height: 100%
     display: flex
     align-items: center
     // State
@@ -15,15 +15,17 @@
       font-weight: 600
       line-height: 1
       color: $c-surfie-green
-      margin-right: 20px
+      margin-right: 10px
       max-width: 100px
       white-space: nowrap
       overflow: hidden
       text-overflow: ellipsis
       user-select: none
+      +media-max($bp-sm)
+        display: none
     &-chevron
       transition: 0.2s
   &__body
     min-width: 140px
     padding: 20px
-    margin-top: 11px
+    margin-top: 1px
