--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -43,6 +43,7 @@
 @import ./components/inline-button
 @import ./components/select
 @import ./components/dropdown
+@import ./components/burger
 @import ./components/table
 @import ./components/tabs
 @import ./components/skill
