--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -1,3 +1,5 @@
+$header-height: 80px
+
 .header
   width: 100%
   background-color: $c-white
@@ -6,7 +8,7 @@
   &__wrap
     display: flex
     width: 100%
-    height: 80px
+    height: $header-height
     margin: 0 auto
     align-items: center
     justify-content: space-between
