notifications-dropdown's and user-dropdown's click area was decreased

--- a/app/sass/components/notifications-dropdown.sass
+++ b/app/sass/components/notifications-dropdown.sass
@@ -1,8 +1,10 @@
 .notifications-dropdown
+  display: flex
+  align-items: center
+  height: 100%
   &__toggle
     display: flex
     align-items: center
-    height: 100%
     &-icon
       margin-right: 10px
     &-title
