--- a/app/sass/components/user-dropdown.sass
+++ b/app/sass/components/user-dropdown.sass
@@ -1,7 +1,9 @@
 .user-dropdown
+  display: flex
+  align-items: center
+  height: 100%
   // Elements
   &__toggle
-    height: 100%
     display: flex
     align-items: center
     // State
