--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -37,6 +37,8 @@ $c-brick-red      : #CC2936
 // UI elements
 $body-bg: $c-athens-gray
 // Sizes
+$header-height: 80px
+// Radiuses
 $r-primary  : 3px
 $r-secondary: 10px
 // Shadows
