--- a/app/sass/components/inner-header.sass
+++ b/app/sass/components/inner-header.sass
@@ -3,11 +3,11 @@
   background-color: $c-white
   box-shadow: $s-primary
   border-radius: 0 0 $r-secondary $r-secondary
-  padding: 20px 15px
   &__wrap
     display: flex
-    max-width: $cnt-xxl
     margin: 0 auto
+    height: $header-height
     align-items: center
   &__logo
     margin-right: 20px
+    max-width: 50px
