--- a/app/sass/pages/login-page.sass
+++ b/app/sass/pages/login-page.sass
@@ -42,6 +42,6 @@
     +media-max($bp-md)
       padding-right: 0
   &__box
-    display: flex
-    justify-content: center
+    margin: 0 auto
+    max-width: 560px
 
