--- a/app/pug/application-page-1.pug
+++ b/app/pug/application-page-1.pug
@@ -8,5 +8,7 @@ block content
   .application-page
     .application-page__header
       +inner-header()
-    .application-page__form
-      include /pages/application-page/step-1/_index
+    .container
+      .application-page__row
+        .application-page__form
+          include /pages/application-page/step-1/_index
