--- a/app/pug/partials/inner-header.pug
+++ b/app/pug/partials/inner-header.pug
@@ -3,8 +3,9 @@ include /partials/lang-select-alt
 mixin inner-header(props = {})
 
   header.inner-header
-    .inner-header__wrap
-      a(href="#").inner-header__logo
-        img(src="images/logo.svg", alt="logo")
-      .inner-header__lang
-        +lang-select-alt()
+    .container
+      .inner-header__wrap
+        .inner-header__logo
+          img(src="images/logo.svg", alt="logo")
+        .inner-header__lang
+          +lang-select-alt()
