--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -1,5 +1,3 @@
-$header-height: 80px
-
 .header
   width: 100%
   background-color: $c-white
@@ -14,6 +12,7 @@ $header-height: 80px
     justify-content: space-between
   &__left
     flex: 0.3
+    display: flex
     +media-max($bp-xl)
       flex: 1
       margin-right: 20px
