--- a/app/sass/pages/application-page.sass
+++ b/app/sass/pages/application-page.sass
@@ -1,7 +1,13 @@
 .application-page
   padding-bottom: 60px
+  &__row
+    +row()
+    justify-content: center
   &__form
-    margin: 0 auto
+    +col(8)
     margin-top: 35px
-    max-width: 1030px
     padding: 0 15px
+    +media-max($bp-xxl)
+      +col(9)
+    +media-max($bp-xl)
+      +col(12)
