--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -90,10 +90,12 @@
     &:active
       background-color: transparent
   &--bg-alabaster
+    color: $c-surfie-green
     background-color: $c-alabaster
     &:hover
       background-color: darken($c-alabaster, 8%)
     &:focus
+      color: $c-surfie-green
       background-color: darken($c-alabaster, 8%)
       box-shadow: 0 0 0 0.2rem rgba($c-alabaster, .5)
     &:active
