--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -36,6 +36,7 @@
 @import ./components/input
 @import ./components/input-animation
 @import ./components/input-group
+@import ./components/input-range
 @import ./components/radio
 @import ./components/checkbox
 @import ./components/button-group
@@ -72,3 +73,5 @@
 @import ./components/upload-documents-box
 @import ./components/password-change-modal
 @import ./components/password-change-success-modal
+@import ./components/edit-avatar-modal
+@import ./components/edit-avatar-box
