--- a/app/pug/pages/settings-page/general.pug
+++ b/app/pug/pages/settings-page/general.pug
@@ -33,7 +33,7 @@ include /partials/link
       .settings-general__avatar-wrap
         +avatar({size:'xl', image:'images/user/avatar.jpg'})
         .settings-general__avatar-button
-          +button({bg:'alabaster', type:'round', size:'50'})(type="button")
+          +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
             +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
       .settings-general__avatar-date
         p.p-sm Member since: 2015-04-12
