--- a/app/sass/components/edit-avatar-tool.sass
+++ b/app/sass/components/edit-avatar-tool.sass
@@ -1,9 +1,13 @@
-.edit-avatar-box
-  &__image
+.edit-avatar-tool
+  &__image-box
+    margin: 0 auto
     margin-bottom: 10px
     display: flex
     justify-content: center
+    height: 340px
+    width: 260px
   &__tip
     text-align: right
+    margin-bottom: 10px
   &__title
     margin-bottom: 10px
