--- a/app/sass/components/input-range.sass
+++ b/app/sass/components/input-range.sass
@@ -36,6 +36,8 @@
     margin: 0
     padding: 0
     background: transparent
+    &:focus
+      border: transparent
     &::-webkit-slider-thumb
       appearance: none
       width: 15px
