--- a/app/pug/partials/input-range.pug
+++ b/app/pug/partials/input-range.pug
@@ -1,13 +1,13 @@
 include /partials/input
 
 mixin input-range(props = {})
-  -const { classes, min, max, value } = props
+  -const { classes } = props
 
   .input-range.js-input-range
     .input-range__minus
       +icon({name:'minus', fill:'surfie-green', width:'14', height:'2'})
     .input-range__wrap
-      +input({classes:`input-range__input ${classes ? classes : ''}`})(type="range" min=min max=max value=value)
+      +input({classes:`input-range__input ${classes ? classes : ''}`})(type="range")&attributes(attributes)
       .input-range__line
     .input-range__plus
       +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
