--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -44,5 +44,6 @@ $r-secondary: 10px
 // Shadows
 $s-primary  : 0px 4px 5px rgba(0, 0, 0, 0.05)
 $s-secondary: -5px 0 20px 0 rgba(0,0,0,.25)
+$s-alt      : 0px 0px 8px -4px rgba(0,0,0,0.75)
 // Overlays
 $o-primary: rgba(0, 0, 0, 0.54)
