--- a/app/sass/components/dropdown.sass
+++ b/app/sass/components/dropdown.sass
@@ -6,14 +6,13 @@
   &__toggle
     cursor: pointer
   &__body
+    display: none
     position: absolute
-    padding: 20px
     top: 100%
     right: 0
-    display: none
     min-width: 100%
-    z-index: 200
+    margin-bottom: 20px
     overflow: hidden
     background-color: $c-white
-    box-shadow: $s-primary
-    margin-bottom: 20px
+    box-shadow: $s-alt
+    z-index: 200
