--- a/app/pug/settings-page.pug
+++ b/app/pug/settings-page.pug
@@ -8,8 +8,8 @@ block variables
   - const title = 'Settings page'
   -
     const tabs = [
-      {title:'General', name:'general', isActive:true},
-      {title:'Education & Files', name:'education'},
+      {title:'General', name:'general'},
+      {title:'Education & Files', name:'education', isActive:true},
       {title:'Services & prices', name:'services'},
       {title:'Notifications', name:'notifications'},
     ]
@@ -33,9 +33,9 @@ block content
                 div(class=`catalog__tab js-tabs-tab ${tab.isActive ? 'is-active' : ''}` data-tab=tab.name)
                   .catalog__tab-title #{tab.title}
             .catalog__content
-              .catalog__content-item.tabs__content.js-tabs-content.is-active(data-content="general")
+              .catalog__content-item.tabs__content.js-tabs-content(data-content="general")
                 include /pages/settings-page/general
-              .catalog__content-item.tabs__content.js-tab-content(data-content="education")
+              .catalog__content-item.tabs__content.js-tab-content.is-active(data-content="education")
                 include /pages/settings-page/education
               .catalog__content-item.tabs__content.js-tab-content(data-content="services")
                 include /pages/settings-page/services
