--- a/app/sass/components/checkbox.sass
+++ b/app/sass/components/checkbox.sass
@@ -18,11 +18,7 @@
     width: 20px
     height: 20px
   &__input
-    position: absolute
-    height: 0
-    width: 0
-    opacity: 0
-    cursor: pointer
+    display: none
   &__checkmark
     position: absolute
     top: 0
