--- a/app/sass/components/input-group.sass
+++ b/app/sass/components/input-group.sass
@@ -1,5 +1,14 @@
 .input-group
+  position: relative
   display: flex
+  width: 100%
+  max-width: 100%
+  &--absolute
+    .input-group__input
+      &:not(:last-child)
+        padding-right: 35px
+      &:not(:first-child)
+        padding-left: 35px
   // Elements
   &__prepend
     display: flex
@@ -11,5 +20,13 @@
     padding-left: 10px
     &--p-0
       padding-left: 0
+  &__append-absolute
+    position: absolute
+    height: 100%
+    right: 0
+    top: 0
+    padding: 0 15px
+    display: flex
+    align-items: center
   &__input
     flex: 1
