--- a/app/sass/components/input.sass
+++ b/app/sass/components/input.sass
@@ -1,7 +1,7 @@
 .input
   width: 100%
   display: block
-  padding: 11px 15px 12px
+  padding: 9px 15px
   font-size: rem(15px)
   line-height: 1
   font-weight: 400
