--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -48,6 +48,7 @@
 @import ./components/table
 @import ./components/tabs
 @import ./components/skill
+@import ./components/skill-checkbox
 @import ./components/palette
 @import ./components/status-message
 @import ./components/inner-header
@@ -69,6 +70,7 @@
 @import ./components/settings-education
 @import ./components/settings-services
 @import ./components/settings-notifications
+@import ./components/skills-dropdown
 @import ./components/upload-documents
 @import ./components/upload-documents-box
 @import ./components/password-change-modal
