--- a/app/sass/components/edit-avatar-tool.sass
+++ b/app/sass/components/edit-avatar-tool.sass
@@ -1,4 +1,7 @@
 .edit-avatar-tool
+  text-align: center
+  &__title
+    margin-bottom: 30px
   &__image-box
     margin: 0 auto
     margin-bottom: 20px
@@ -6,5 +9,11 @@
     justify-content: center
     height: 340px
     width: 260px
-  &__title
+  &__change
     margin-bottom: 10px
+  &__range
+    margin-bottom: 20px
+  &__buttons
+    display: flex
+    align-items: center
+    justify-content: space-between
