--- a/app/pug/partials/edit-avatar-tool.pug
+++ b/app/pug/partials/edit-avatar-tool.pug
@@ -1,11 +1,25 @@
 include /partials/input-range
+include /partials/button
+include /partials/input
+include /partials/upload-button
 
 mixin edit-avatar-tool(props = {})
 
   .edit-avatar-tool.js-edit-avatar-tool
+    .edit-avatar-tool__title
+      h3 Renew profile image:
     .edit-avatar-tool__image-box
       img(src="images/user/avatar.jpg", class="edit-avatar-tool__image" alt="avatar")
-    .edit-avatar-tool__title
+    .edit-avatar-tool__change
       h5 Change size <span class="text-surfie-green edit-avatar-tool__number">1</span>
     .edit-avatar-tool__range
       +input-range({classes:'edit-avatar-tool__range-input'})(value="0")
+    .edit-avatar-tool__buttons
+      +button({bg:'transparent'})(type="button")| Delete current photo
+      .button-group
+        +button({bg:'alabaster', classes:'button-group__button edit-avatar-tool__upload', tag:'label'})
+          +input({standard:false, hidden:true})(type="file" accept="image/*")
+          span Upload new
+          span.button__icon
+            +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
+        +button({classes:'button-group__button'})(type="button" data-modal-close="edit-avatar-modal")| Apply
