--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -14,6 +14,7 @@
   background-color: $c-surfie-green
   border: 1px solid transparent
   transition: 0.2s
+  cursor: pointer
   &:hover
     background-color: darken($c-surfie-green, 8%)
   &:focus
