--- a/app/sass/components/edit-avatar-modal.sass
+++ b/app/sass/components/edit-avatar-modal.sass
@@ -2,18 +2,9 @@
   padding: 60px 15px
   +media-max($bp-md)
     padding: 40px 15px
-  &__wrap
+  &__body
     display: flex
     flex-direction: column
     text-align: center
     margin: 0 auto
     max-width: 550px
-  &__title
-    margin-bottom: 30px
-  &__box
-    margin-bottom: 40px
-  &__control
-  &__buttons
-    display: flex
-    align-items: center
-    justify-content: space-between
