--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -35,6 +35,8 @@ p, .p
 // Colors
 .text-white
   color: $c-white
+.text-alto
+  color: $c-alto
 .text-mine-shaft
   color: $c-mine-shaft
 .text-surfie-green
