--- a/app/sass/components/edit-avatar-tool.sass
+++ b/app/sass/components/edit-avatar-tool.sass
@@ -9,6 +9,20 @@
     justify-content: center
     height: 340px
     width: 260px
+  &__placeholder
+    cursor: pointer
+    display: none
+    &-wrap
+      display: flex
+      margin: 0 auto
+      margin-bottom: 20px
+      align-items: center
+      text-align: center
+      width: 260px
+      height: 340px
+      justify-content: center
+      padding: 15px
+      border: 1px solid $c-alto
   &__change
     margin-bottom: 10px
   &__range
